src/parser/snapshots/aeon__parser__tests__math.snap
---
source: src/parser/mod.rs
expression: "parse(\"aeon_examples/math.aeon\")"
---
Ok(
    Ast {
        root: Some(
            Module {
                decl: Keyword(
                    Module,
                ),
                name: "Main",
                imports: [],
                modules: [],
                functions: [
                    Function {
                        decl: Keyword(
                            Fn,
                        ),
                        name: "main",
                        parameters: [],
                        return_type: TypeInfo {
                            name: Some(
                                "void",
                            ),
                            is_mut: false,
                        },
                        block: Block {
                            statements: [
                                Expression(
                                    Variable(
                                        Variable {
                                            name: "a",
                                            is_decl: true,
                                            expression: Some(
                                                Binary {
                                                    left: Literal(
                                                        Number(
                                                            "5",
                                                        ),
                                                    ),
                                                    right: Literal(
                                                        Number(
                                                            "1",
                                                        ),
                                                    ),
                                                    operator: Plus,
                                                },
                                            ),
                                            type_info: Some(
                                                TypeInfo {
                                                    name: None,
                                                    is_mut: false,
                                                },
                                            ),
                                        },
                                    ),
                                ),
                            ],
                        },
                    },
                ],
                variables: [],
            },
        ),
    },
)
